--- a/playbook.yaml
+++ b/playbook.yaml
@@ -51,14 +51,14 @@
           [Install]
           WantedBy=multi-user.target
 
-    - name: Create usb8 interface config
+    - name: Create usb0 interface config
       ansible.builtin.copy:
         dest: /etc/network/interfaces.d/usb0.conf
         content: |
           allow-hotplug usb0
           iface usb0 inet dhcp
 
-    - name: Create udev rule
+    - name: Create udev rules
       ansible.builtin.copy:
         dest: /lib/udev/rules.d/60-gopro.rules
         content: |
